# concur-react-starter

./: .gitignore  LICENSE  README.md  myproject.cabal  package-lock.json  package.json  package.yaml  stack-ghcjs.yaml  stack.yaml
js-src/: index.js
src/: Main.hs
