name:                myproject
version:             0.1.0.0
synopsis:            Project synopsis here
description:         Project description here
homepage:            https://github.com/myname/myproject
license:             BSD3
license-file:        LICENSE
author:              My Name
maintainer:          myname@example.org
copyright:           2017 My Name
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable myproj
  ghc-options:         -Wall -ferror-spans
  js-sources:          jsbits/index.compiled.js
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , stm >= 2.4
                     , mtl >= 2.2
                     , free >= 4.12
                     , transformers >= 0.5
                     , concur-core
                     , concur-react

  if impl(ghcjs)
    hs-source-dirs: src-ghcjs
    build-depends:
      ghcjs-base
  else
    hs-source-dirs: src-ghc
    build-depends:
      ghcjs-base-stub >= 0.1

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/myname/myproject
